# Absolute-Service

./: CMakeLists.txt  README.md  cars.json  database.h  handlers.cpp  handlers.hpp  main.cpp  readme  task
Absolute-Service-Iv4nKer-patch-4/car_delivery/client/: client.cpp  main.cpp
Absolute-Service-Iv4nKer-patch-4/car_delivery/common/: utils.hpp
Absolute-Service-Iv4nKer-patch-4/car_delivery/data/: cars.json  documents.json
Absolute-Service-Iv4nKer-patch-4/car_delivery/server/: handlers.hpp  main.cpp  server.cpp
Absolute-Service/car_delivery/client/: client.cpp  client.hpp
Absolute-Service/car_delivery/server/: handlers.cpp
car_delivery/: CMakeLists.txt  client.cpp
car_delivery/car_delivery/common/car_delivery/common/include/car_delivery/common/src/: car.cpp
car_delivery/car_delivery/common/car_delivery/common/include/car_delivery/common/src/car_delivery/client/car_delivery/client/include/car_delivery/client/src/car_delivery/client/src/: main.cpp
car_delivery/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
car_delivery/client/include/: client_menu.h
car_delivery/client/src/: client_menu.cpp
car_delivery/common/: CMakeLists.txt
car_delivery/common/include/: car.h
car_delivery/data/: cars.json
car_delivery/server/: CMakeLists.txt  handlers.cpp  handlers.hpp  server.cpp
car_delivery/server/include/: server_core.h
car_delivery/server/src/: main.cpp  server_core.cpp
client/: admin_menu.cpp  client.cpp  client.hpp  main.cpp
common/: logger.hpp  utils.cpp
server/: handlers.cpp  handlers.hpp  main.cpp  server.cpp  server.hpp
testCarDelivery/: CMakeLists.txt
testCarDelivery/client/: client.cpp  client.hpp  main.cpp
testCarDelivery/common/: utils.cpp  utils.hpp
testCarDelivery/data/: cars.json  cities.json
testCarDelivery/server/: handlers.cpp  handlers.hpp  http_parser.cpp  http_parser.hpp  main.cpp  server.cpp  server.hpp
tests/: CMakeLists.txt  test_client  test_fetch_all_cars.cpp  test_handlers.cpp  test_utils  test_utils.cpp
tests/client/: test_client.cpp
tests/common/: test_utils.cpp
